# StreamIndex

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
benchmarks/: bench_chunked_indexer_recall.py  bench_csa.py  bench_csa_e2e.py  bench_csa_long_context.py  bench_decode.py  bench_hca.py  bench_long_context.py  bench_long_context_fwd_bwd.py  bench_pipeline_composition.py  bench_sparse_attn.py  bench_v4_pro_dims.py  bench_vs_tilelang_pipelined.py  run_paper_benchmarks.sh
benchmarks/results/2026-04-25/: RESULTS.md
benchmarks/results/2026-04-27/: RESULTS.md
benchmarks/results/2026-05-01/: RESULTS.md
docs/: architecture.md  fusion_analysis.md  hyperparameters.yaml  ir_analysis.md  math.md  reference_inventory.md  streaming_topk.md  v4_flash_integration_plan.md
eval/: README.md  ablation_chunked_indexer.py  bench_v4_indexer_scaling.py  longbench_v2_loader.py  needle_haystack.py  run_v4_inference.py  setup_v4_flash.sh  swebench_loader.py  sweep_design_space.py  test_v4_indexer_parity.py
flash_sparse/: __init__.py  csa.py  hca.py  reference.py
flash_sparse/triton/: __init__.py  chunked_indexer.py  indexer_score.py  indexer_streaming_topk.py  inverted_topk.py  sparse_attn_bwd.py  sparse_attn_bwd_v2.py  sparse_attn_fwd.py
flash_sparse/utils/: compression.py  quantization.py
tests/: test_against_reference.py  test_chunked_indexer.py  test_csa_correctness.py  test_gradient_check.py  test_hca_correctness.py  test_inverted_topk.py  test_streaming_indexer_topk.py  test_triton_indexer_score.py  test_triton_sparse_attn_bwd.py  test_triton_sparse_attn_bwd_v2.py  test_triton_sparse_attn_fwd.py
